[tool.poetry]
name = "thirstmap-api-server"
version = "0.1.0"
description = "A Django API server for collecting data about plants from the IoT."
authors = ["Kieran Dominy <38659105+MrKren@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"
ipython = "^8.16.1"
ipdb = "^0.13.13"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
